# auto_trade

./: .gitignore  Dockerfile  app.py  crypto_auto_trade.py  docker-compose.yml  pyproject.toml  requirments.txt  server.py  stock_auto_trade.py  us_stock_auto_trade.py
.github/workflows/: deploy.yml
crypto/: account.py  classes.py  consts.py  crypto_app.py  crypto_auto_trade.py  currency.py  main.py  price_utils.py  strategy.py  utils.py
crypto/test/: class_test.py  study.py  test.py  time_test.py
infrastructure/: chat_client.py  google_sheet_client.py  upbit_client.py
stock/: us_stock_auto_trade.py
tests/: account_test.py  class_test.py  jwt_test.py  sheet_test.py  st_test.py  strategy_test.py  study.py  tempCodeRunnerFile.py  upbit_test.py
utils/: logger.py  my_time.py  upbit_util.py
